# hgnn_demos

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  default.yml  docker-compose.yml  env.template  loans.yml  pyproject.toml
examples/configs/: default.yml  default01.yml  loans.yml
examples/notebooks/: 00_api.ipynb  00_api_loan.ipynb  01_explanations.ipynb  02_autoencode_features.ipynb  03_neural_architecture_search.ipynb
examples/scripts/: demo_utils.py
notebooks/: 01_explanations.ipynb
src/: 02_autoencode_features.ipynb  artificial_data.py  basic_utils.py  default01.yml  demo_loan_utils.py  demo_utils.py  experiment_v01.ipynb  finance_demo.ipynb  manage.py  setup.py  testkasse.py  utils.py  utils_middleware_v1.py  utils_neo4j.py
src/auto_hgnn/: artificial_data.py  basic_utils.py  manage.py  utils.py
src/notebooks/: 01_train_demo.ipynb
src/scripts/: manage.py  utils_neo4j.py
src/tests/: test_neo4j.py
