[tool.poetry]
name = "hgnn-demos"
version = "0.1.0"
description = ""
authors = ["Florian Teich"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8"
faker = "^18.4.0"
matplotlib = "^3.7.2"
neo4j = "^5.22.0"
pandas = "^2.0.0"
python-dotenv = "^1.0.0"
rich = "^13.4.2"
scikit-learn = "^1.2.2"
sentence-transformers = "^2.2.2"
sqlalchemy = "^1.4.16"
tabulate = "^0.9.0"
tensorboard = "^2.13.0"
torch = {version = "^2.0.1", source = "pytorch_cpu"}
torch-geometric = "^2.5.3"
typer = "^0.9.0"

[tool.poetry.group.full.dependencies]
yfiles-jupyter-graphs = "^1.4.4"
torch-tb-profiler = "^0.4.1"
jupyter = "^1.0.0"
ipykernel = "^6.22.0"
plotly = "^5.15.0"
captum = "^0.6.0"

[tool.poetry.dev-dependencies]
isort = "^5.12.0"
pre-commit = "^3.7.1"
pytest = "^6.2"
pylint = "^2.13"
mypy = "^0.910"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
